pawn shop, taxidermy, park, snoopin, nightclub
put in mackenzies writing. super tired so i just plopped it in and didnt
try to fit it into the established meaty framework sorry. i put
instructions in caps sorry if it seems like i am a yelling man i am
neither okay sleps now

--- a/Beegin.html
+++ b/Beegin.html
@@ -648,7 +648,17 @@ If you have the {McGuffin 1} you can trade for taxidermy equipment
 &lt;/span&gt;
 &lt;&lt;endif&gt;&gt;\
 
-&lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
+&lt;&lt;display &quot;Directional Map&quot;&gt;&gt;
+
+IM ADDING MACKENZIES TEXT DOWN HERE SORRY IM TOO TIRED TO SLOT IT IN WHERE IT NEEDS TO GO OKAY KTHXBEE
+
+Business has been good for the BizBuzz Pawn Shop. Depressingly good. All the bees desperate to leave the hive traded in their prized combs and heirloom wax sculptures to get enough supplies to make it to a new home. An enormous bee lounges behind the counter. He looks you over and gives a self satisfied smirk, he always thought you were a bit big for your stripes. &quot;Got something special for me Doc?&quot;
+
+You stare at him blankly, exposing the depths of your empty and hopeless existence - maybe he&#39;ll understand even though you have nothing : &quot;If ya got nuthin to swap for, then scram, chief.&quot;
+You slowly take out the {bee pun book} and lay it on the counter without breaking eye contact. &quot;Well now, that is something you don&#39;t see every day. I&#39;m a bit of a comedian myself you know. (you do - everyone in town knows this guy is the worst, and only, stand up comedian in the hive), Tell you what - I&#39;ll trade rare for rare, what do you want?&quot; &quot;I need to find something in the sewers - it is a matter of national security.&quot; you say officiously. &quot;Well I do happen to have this detailed sewer map. Could come in handy when you decide to return to where you came from - hur hurr!&quot; His whole body jiggles with laughter.
+
+
+You cough discreetly while sliding the... thing you found in the rundown housing development {McGuffin 1} across the counter. &quot;Ah, well that&#39;s sumpthin in&#39;it? What would you like? It&#39;s a bit old but I&#39;m sure we can make arrangements &quot; He tries to act disinterested but you can see the creatures eyes glinting with greed. &quot;I&#39;m interested in your taxidermy stock - all of it..&quot;</tw-passagedata>
 <tw-passagedata pid="22" name="Hospital Lobby" tags="" position="925,1093">The hospital is clean and smells of cleanliness.
 
 &lt;&lt;if $warpTimes === 1 &amp;&amp; visited(&quot;Supply Closet&quot;) === 0&gt;&gt;\
@@ -722,7 +732,25 @@ You can trade for taxidermied queen top (which gives you {half amount of Royal J
 &lt;&lt;endif&gt;&gt;
 &lt;&lt;endif&gt;&gt;\
 
-&lt;&lt;display &quot;Enough Jelly&quot;&gt;&gt;</tw-passagedata>
+&lt;&lt;display &quot;Enough Jelly&quot;&gt;&gt;
+
+OKAY THIS IS ALL MACKENZIES STIFF PUT IT WHERE IT NEEDS GO FOR JUICY MEATS DO MUSCLE THINGS AND ALL THE CHILDREN DO A CLAPPING
+
+
+Of course the door creaks as you slowly open the door to Beedead Taxidermy. You&#39;ve never visited this shop for a reason - too likely you&#39;d run into one of your medical failures on display. It is just as bad as you thought it would be - a mix of familiar medical chemical smell with an undercurrent of rot and mildew. Hundreds of favorite aphid, trophy mantis and dearly departed bee heads are mounted on the wall. Helplessly attracted to a glass cabinet you realize it is filled with jars of antennae, mandibles and multi-faceted eyes. This is where your dreams went to die you think. Suddenly one of the standing taxidermied bees blinks. You yelp and stumble backwards into a stack of boxes - just barely managing to stop them from crashing to the ground. 
+
+
+(If you have no taxidermied items or Queen&#39;s Stinger) The shopkeeper silently leans past you pluck a large needle from the top box and then roams the room collecting all the necessary ingredients (I don&#39;t really know what these would be) for the taxidermy of, well, of a r-rather large specimen, honestly, it&#39;d almost be enough to taxidermy a bee the size of...you.
+
+
+She meaningfully sizes you up and sniffs sharply turning back to preparing her ingredients, and you nope the fuck out of there. Maybe you should only come back with something that would interest someone who devotes their lives to embalming dead things.
+
+
+&lt;&lt;if $warpTimes === 1&gt;&gt;
+You put the box of  {taxidermy equipment} safely between you and the Taxidermist. Without a word her hand shoots inside, rummaging, weighing, valuing. &quot;hrumf, Adequate.&quot; She takes the box and speaks quickly as she walks out of the room. &quot;Obtain a specimen and I predict a unique result.&quot; 
+
+You reverently and respectfully hold out the  {taxidermied larvae} or {taxidermied pupa}, The shopkeeper stares at  it for a long, long moment and you begin to worry you&#39;ve offended her so you start to shift back towards the door. Her hand shoots out suddenly holding you in place by the wrist. &quot;They are so beautiful when young.&quot; she says softly. &quot;You can take what you like&quot; you can trade for taxidermied queen top (which gives you {half amount of Royal Jelly}) or taxidermied queen bottom (which gives you queen&#39;s stinger).
+&lt;&lt;endif&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="26" name="Park" tags="" position="783,1358">Description.
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
@@ -743,6 +771,32 @@ there pupa hanging out, you may choose to ebalm them will they are still alive. 
 &lt;&lt;/click&gt;&gt;
 &lt;&lt;endif&gt;&gt;
 &lt;&lt;endif&gt;&gt;
+
+&lt;&lt;display &quot;Directional Map&quot;&gt;&gt;
+
+MORE OF MCKENIZIES STUFF FIGURE IT OUT YO ALSO THERES A NEW PASSAGE CALLED [[SNOOPIN]] IT SHOULDNT BE A PASSAGE, STUFF SHOULD EITHER BE IN ABANDONED NIGHTCLUB OR HERE WHEN YOU CLICK ON SNOOP, OR SPLIT BETWEEN THE TWO YOU DONT KNOW FUCK I MEAN I DONT KNOW STUPID ADDICTIVE SECOND PERSON
+
+You used to love the park until your adult antennae made you all to aware of the quiet corners and lurkable shadows. The desolate area is to your benefit tonight as you sneak from honey bush to wax tree towards the nightclub. You&#39;ve heard that its been taken over by unhoneyed elements but honestly you stopped looking around a long time ago. &lt;&lt;if $warpTimes === 1&gt;&gt;
+&lt;&lt;click &quot;Look at Abandoned Nightclub&quot;&gt;&gt;
+    &lt;&lt;set document.getElementById(&quot;snoopin&quot;).style.display = &quot;&quot;&gt;&gt;
+&lt;&lt;/click&gt;&gt;
+
+
+&lt;span id=&quot;snoopin&quot; style=&quot;display:none&quot;&gt;
+(I realize that I added the watching the guards to the wrong section so move around as you want) paragraph about getting a sense of the guards rotations by casually snoopin from a park bench, flag is dropped or variable changed or whatever for use at the abandoned nightclub
+&lt;&lt;set $snoopin = true&gt;&gt;
+&lt;/span&gt;
+
+&lt;&lt;if $taxidermyEquipment&gt;&gt;
+&quot;Kacheek-hic- hic-cup&quot; A small noise comes from behind a honeybush. You peek around the corner and see that a pupa has found a private spot to pupate. It&#39;s a small hollow with an amber pond and an overhanging wax formation. The pupa is completely blissed out and focused on the changes inside its body. It occurs to you that nobody would notice if one more pupa didn&#39;t make it through the process - especially one that chose to leave the nursery and face it on their own.  You could embalm them and gain a valuable asset - I mean it is the fate of the hive and her future anyway - what is one to the many? {taxidermied pupa}
+
+
+&lt;&lt;click &quot;Embalm pupa&quot;&gt;&gt;
+    &lt;&lt;set $taxidermiedPupa = true&gt;&gt; You got a taxidermied pupa.
+&lt;&lt;/click&gt;&gt;
+&lt;&lt;endif&gt;&gt;
+&lt;&lt;endif&gt;&gt;
+
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="27" name="Bar" tags="" position="657,1142">The End is
@@ -799,7 +853,7 @@ She snorts. &quot;Wow, no wonder you&#39;re wasting your time with me. You&#39;r
 &lt;/span&gt;\
 &lt;/span&gt;\
 &lt;&lt;endif&gt;&gt;\</tw-passagedata>
-<tw-passagedata pid="28" name="Dorm Entrance" tags="" position="656,1392">Description
+<tw-passagedata pid="28" name="Dorm Entrance" tags="" position="658,1399">Description
 
 [[Room 1]]
 [[Room 2]]
@@ -1183,6 +1237,21 @@ A... thing. It&#39;s gnarled in places, but unnaturally smooth in others. As you
 You&#39;ve got no hively idea what this could possibly be, but it&#39;s gotta be worth something to somebody. Thinking this, you quickly turn around, expecting someone to try and take it from you, but strangely, there&#39;s no one around. Even the small crowd of onlookers you had gathered is nowhere to be seen. Huh.
 
 Disregarding this oddity, you wander away from the derelict housing, entranced in the odd beauty of the... thing you find. So lost in wonderment are you, you&#39;re somewhat surprised when you find yourself smack dab in the middle of [[Pioneer Hexagon|Main Plaza]].</tw-passagedata>
+<tw-passagedata pid="57" name="SNOOPIN" tags="" position="980,1542">BR3EAK THIS SHIT UP INTO PARK WHEN YOU CLICK SNOOPIN AND THE AVANDONED NIGHTCLUB VIA WHAT MAKES SENSE
+
+Your first dance. Your first kiss. You first...first - everything happened at the B-Bop. This parking lot is a map of memories and adolescent turf wars. Now the place is empty and quiet, bars across the front door, only dark corners and broken windows remain...right? But no, that neon sign is still flickering, so something is powering the place - and is that movement in the shadows?  Yes it is, there is bee leaning up against the old stage door with all its arms crossed staring out across the lot.  Hmm, your nostalgic pause might have saved your stinger. You lurk behind the trees and watch until the guard changes - it seems to pretty rapidly about every 20 minutes. You&#39;re not sure what to do with that yet, but often the guards move away from the door and have a smoke and chat when they switch so there should be a brief opportunity to sneak in - what&#39;s beyond the door though is anyone&#39;s guess.
+
+&lt;&lt;if $warpTimes === 1&gt;&gt;
+&lt;&lt;if $snoopin&gt;&gt;
+&lt;&lt;set $beePunBook = true&gt;&gt;
+The next guard shift - you&#39;re ready, as the bees move off for a quick break you slide to the door and slip through. The inside hallway is dark, but you&#39;ve been here many times before - a brief dream of punk rock glory gave you ample opportunity to memorize the maze back here. You sneak down to the green room and find a {bee pun book} (variable changed to reflect such). This is valuable to the right person - and you know just the buyer. You easily avoid a few shadowy figures inside the club and exit out the kitchen to the sewers [[away|Sewer Exit]] -leaving ghosts and shady bees behind.  
+&lt;&lt;else&gt;&gt;
+Rounding a corner you stumble right into the guard leaving duty. You&#39;re both shocked for a moment before she starts to yell. Thinking quick, you climb up to the rigging lights and sneak over to the sewer [[away|Sewer Exit]].
+&lt;&lt;endif&gt;&gt;
+
+
+Afterwards, reason to [[return|Sewer Exit]]
+&lt;&lt;endif&gt;&gt;</tw-passagedata>
 </tw-storydata>
 </div>
 	<script id="script-sugarcube" type="text/javascript">
