palace stuff, cthulu mythos, the usual
things have gotten a little weird

--- a/Beegin.html
+++ b/Beegin.html
@@ -402,7 +402,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -1377,8 +1379,20 @@ Afterwards, reason to [[return|Sewer Exit]]
 You probably shouldn&#39;t bee so satisfied at the squelch sound the stinger makes as it penetrates right through his exoskeleton. A splash of green hits the wall behind him, and slumps to the ground. He twitches for a few moments, before becoming completely still. When all of this is over, you&#39;re definitely going to need to see a therapist, or at least consider a change of career.
 
 You step over his rapidly cooling body, ignoring the stinger embedded in between his eye sockets. It&#39;s useless to you now. Pushing open the heavy doors, you find a room absolutely filled with royal jelly. After looking closer for a few minutes, however, you realize only a quarter of the room at most is filled - it just seems like an overwhelming amount after the shortages you&#39;ve witnessed over the previous months. You make short work of grabbing all the royal jelly you need, and hurry off to find the [[Palace Elder]].</tw-passagedata>
-<tw-passagedata pid="60" name="Calm, cool, and threatening as all get out" tags="" position="662,1832"></tw-passagedata>
-<tw-passagedata pid="61" name="Unhinged, wild, and frightening as all get out" tags="" position="792,1842">Double-click this passage to edit it.</tw-passagedata>
+<tw-passagedata pid="60" name="Calm, cool, and threatening as all get out" tags="" position="662,1832">ROYAL JELLY + 2
+
+You stroll towards the drone, relatively short in stature, but tall in purpose. He looks at you quizically, before noticing the brandished stinger, compound eyes widening in shock, but not fear. Not yet. Not until you plunge the stinger right through his goddamn face//what the fuck, dude?// Wasn&#39;t it agreed that you were going to try and solve this without violence//holy shit what are you even doing he&#39;s dead okay he&#39;s dead oh god please stop//
+
+Okay, let&#39;s just all calm down here, okay? Beesus Lord Almigh-//NO, STOP THAT! WHERE DID YOU EVEN LEARN TO-//
+
+You know what? If you&#39;re gonna be like that, fine. Blah blah you brutally murder him, not caring about his hopes and friends and dreams and family, you get into the room and just fucking take a bunch of royal jelly without even stopping for exposition or flavor. You don&#39;t even get anything cool like blood splatter on your face. You&#39;re just a goddamn psycopath with a pocket full of jam. This quest is done, okay? Just make your way to [[Palace Elder]] already.</tw-passagedata>
+<tw-passagedata pid="61" name="Unhinged, wild, and frightening as all get out" tags="" position="792,1842">ROYAL JELLY + 2
+
+You burst around the corner and run at the drone, screaming wildly. He&#39;s momentarily surprised, but quickly adopts a low, defensive stance. Then his eyes catch sight of the cruel stinger in your hand. And then he realizes you seem to be speaking in the ancient unknowable tongue of the Elderflower Gods. &quot;//ABZZHOLOS, DEVOURER IN THE MIST, SPAWN OF QUEENTHULU, R&#39;HYVE WAX&#39;NAGL FTHIVEGN!//&quot;
+
+His mind explodes. Like literally, it comes bursting out from behind his exoskeleton, green fluid and viscera coating the doors. Hmmmm. That wasn&#39;t supposed to happen. This Lovecraft riff was just supposed to be a joke. You know what? Let&#39;s just quickly move on from this and speak no more of it. You go into the room, grab all the royal jelly you need, yadda yadda, and quickly make your way to the [[Palace Elder]].
+
+What the hell.</tw-passagedata>
 <tw-passagedata pid="62" name="Palace Elder" tags="" position="980,1854">Double-click this passage to edit it.</tw-passagedata>
 </tw-storydata>
 </div>
